Fixing card spacing

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,4 +1,4 @@
 .card-wrapper {
-    transform: scale(0.5);
-    margin: 0 -20%;
+    display: flex;
+    margin: 0 -5%;  
 }
